examples/customer-examples/customer-overlays/customer-a/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incoming
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - customer-a.172-233-134-153.nip.io
      secretName: example-tls
  rules:
  - host: customer-a.172-233-134-153.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apache
            port:
              number: 80
